# flipt-react-native

./: .gitignore  .gitmodules  CONTRIBUTING.md  Flipt.podspec  LICENSE  README.md  ReactNativeFlipt.podspec  package.json  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
.github/ISSUE_TEMPLATE/: config.yml
BronchaReactNativeFliptFramework.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/flipt/: FliptModule.kt  FliptPackage.kt  ReactNativeFliptModule.kt  ReactNativeFliptPackage.kt
cpp/: broncha-react-native-flipt.cpp  broncha-react-native-flipt.h  react-native-flipt.cpp  react-native-flipt.h
example/: app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/flipt/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/FliptExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/FliptExample.xcodeproj/: project.pbxproj
example/ios/FliptExample.xcodeproj/xcshareddata/xcschemes/: FliptExample.xcscheme
example/ios/FliptExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Flipt.h  Flipt.mm  ReactNativeFlipt.h  ReactNativeFlipt.mm
rust/: Cargo.toml  build.rs
rust/src/: flipt.udl.bkp  lib.rs
src/: NativeFlipt.ts  NativeReactNativeFlipt.ts  index.tsx  useFliptClient.tsx  wrapper.ts
